# Lindquist-Neil-Work

./: .gitignore  README.md  files.txt
Iterative_Solvers/: iterSolve.m  iterSolveSingle.m
Julia/: Conjugate Gradient.ipynb
MatLab/: csrVScscTest.m  dotProdSS.cpp  dotProdSSTest.m  doubleMatvec.cpp  doubleMatvecTest.m  dpcg.m  errortest.m  getErrors.m  getIterCounts.m  iterSolve.m  matvecMixed.m  matvecSame.m  matvecSingle.m  matvecSpeedTest.m  normS.cpp  normSTest.m  pathdef.m  plotErrors.m  plotIterCounts.m  residual.cpp  residualTest.m  scg.m  singleMatvec.cpp  sparseCast_.cpp  sparseMatvec.m  sparseSingle.m  sparseSingleTest.m  spcg variable types.txt  spcg.m  spcgErrNormalize.m  spcgErrorTest.m  testProbs.txt
MatLab/Results/: spcg versus dpcg timing.txt
MatLab/UFget/: UFsettings.txt
bibliography/: bibliography.bib  bibliography.tex
hpcg/: Update-Mixed-precision-branch.sh  build_MPI  build_gprof  build_serial  build_templated.sh  build_zfp.sh  test_script.sh  test_script_MPI  test_script_gprof  test_script_serial
hpcg-compression notes/: Consistancy tests.ods  Exact count of index offsets, excluding first index in each row.txt  HPCG Integer encoding notes.txt  HPCG compression notes.txt  hpcg matrix content.txt  x error notes.txt  zfp-hpcg performance model.nb  zfp-hpcg possible optimizations for gcc.txt  zfp-hpcg-spmv sym - full parallel.lisp  zfp-hpcg-spmv sym - nonparallel decodes.lisp  zfp-hpcg-spmv sym -full parallel - analysistxt  zfp-hpcg-spmv sym -full parallel -results.txt
hpcg-compression notes/opcode compression notes/: initalPrev: r->0.csv  initalPrev: r->0.ods  initalPrev: r->r-96*96-96-1.csv  opcode automation branstorm.txt  opcode brainstorem
hpcg/Linux_Serial_Mixed/: Makefile
hpcg/Linux_Serial_Single/: Makefile
hpcg/Linux_Serial_Templated/: Makefile
hpcg/Linux_Serial_ZFP/: Makefile
hpcg/MPI_GCC_OMP_Mixed/: Makefile
hpcg/MPI_GCC_OMP_Single/: Makefile
hpcg/MPI_Intel_OMP_Mixed/: Makefile
hpcg/MPI_Intel_OMP_Single/: Makefile
hpcg/MPI_Intel_OMP_Templated/: Makefile
hpcg/MPI_Intel_OMP_ZFP/: Makefile
hpcg/MPI_gprof_OMP_Double/: Makefile
hpcg/MPI_gprof_OMP_Mixed/: Makefile
hpcg/MPI_gprof_OMP_Single/: Makefile
hpcg/model/: CG_ref - mixed.txt  CG_ref.txt  ComputeDotProduct_ref - mixed.txt  ComputeDotProduct_ref.txt  (+18 more)
julia/: Conjugate Gradient.ipynb  IJulia generator indent problem SSCE.ipynb  IJulia generator indent problem SSCE.jl  Inheritance Tests.ipynb  Inheritance Util.jl  Parametric types experiments.ipynb  Project.toml  Run power-method time tests.sh  Sparse matvec.ipynb
julia/power-method/ePetra-PowerMethod/src/: CMakeLists.txt  cxx_main.cpp
(+307 files in other folders)
